--- a/JavaScript_13-10-2022/Dom y Eventos/estilos.css
+++ b/JavaScript_13-10-2022/Dom y Eventos/estilos.css
@@ -4,18 +4,66 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 form{
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
 
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
-form input{
+form label,
+form section{
+    width: 100%;
     margin: 1%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-form input[type=button]{
+form label span{
+    width: 15%;
+}
+
+form label input{
+    width: 10%;
+    padding: 0.3%;
+    text-align: center;
+}
+
+form label input[type=color]{
+    height: 40px;
+}
+
+form input[type=button],
+form input[type=submit]{
     width: 10%;
     padding: 1%;
+    margin: 1%;
+
+    font-size: 1.1rem;
+
+    border-radius: 20px;
+    border: 1px solid grey;
+}
+
+table{
+    width: 50%;
+    text-align: center;
+
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+td{
+    padding: 1%;
+    
+    border: 1px solid black;
+    border-collapse: collapse;
 }
