--- a/JavaScript_02-11-2022/css/style.css
+++ b/JavaScript_02-11-2022/css/style.css
@@ -4,6 +4,74 @@
     box-sizing: border-box;
 }
 
+:root{
+    --bg_blue: #22ccee;
+    --txt_blue: #d5f8ff;
+
+    --bg_yellow: #ffdd43;
+    --txt_yellow: #fcfcdd;
+
+    --bg_pink: #fe50ac;
+    --txt_pink: #fbd2e8;
+
+    --bg_black: #445576;
+    --txt_black: #ccddee;
+
+    --table_selected: #ccddee;
+    --table_bg: #fff;
+    --game_bg: #dee;
+}
+
+html, body{
+    width: 100vw;
+    height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    background-color: var(--game_bg) !important;
+}
+
+/* Buttons */
+
+.easy, .middle, .hard{
+    width: 40%;
+    height: 40px;
+
+    border: none;
+    border-radius: 6px;
+
+    font-weight: bold;
+}
+
+.easy, .one{
+    background-color: var(--bg_blue);
+    color: var(--txt_blue);
+}
+
+.middle, .two{
+    background-color: var(--bg_yellow);
+    color: var(--txt_yellow);
+}
+
+.hard, .three{
+    background-color: var(--bg_pink);
+    color: var(--txt_pink);
+}
+
+.four{
+    background-color: var(--bg_black);
+    color: var(--txt_black);
+}
+
+section{
+    height: 80vh;
+}
+
+/* Table */
+
 table{
     text-align: center;
     width: 70% !important;
@@ -11,11 +79,15 @@ table{
 
 table tr,
 table td{
-    background-color: aliceblue;
-    border: 1px solid black;
+    background-color: var(--table_bg);
+    border: 4px solid var(--game_bg);
+    border-radius: 13px;
 
     width: 2% !important;
     height: 40px;
+
+    font-size: 1.3rem;
+    font-weight: bold;
 }
 
 table td:hover{
@@ -23,4 +95,36 @@ table td:hover{
     cursor: pointer;
 }
 
-.selected {background-color: antiquewhite;}
+.nothing {
+    background-color: var(--table_selected);
+}
+
+/* Layout */
+
+.layout{
+    width: 70%;
+    margin-bottom: 5%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 2rem;
+
+    display: none;
+}
+
+.layout .emoji{
+    font-size: 4.5rem;
+    cursor: pointer;
+}
+
+.num_bombs, .game_time{
+    background-color: var(--table_selected);
+    color: white;
+
+    font-weight: bold;
+
+    padding: 1%;
+    border-radius: 20px;
+}
