Acabando actividad de consumo de APIs

--- a/JavaScript_08-02-2023/src/styles/index.css
+++ b/JavaScript_08-02-2023/src/styles/index.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* width */
+::-webkit-scrollbar {
+    width: 13px;
+    }
+    
+    /* Track */
+    ::-webkit-scrollbar-track {
+        background: #3d3d3f;
+    }
+    
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: #171717;
+    }
+    
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #171717;
+    }
